ssl_configurations/service-financeiro.yaml
apiVersion: v1
kind: Service
metadata:
  name: financeiro-ws-service
  namespace: java-pro
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30080
  selector:
    app: financeiro-ws
