ssl_configurations/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: financeiro-ws-ingress
  namespace: java-pro
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - financeirows.grupomateus.com.br
      secretName: financeiro-secret
  rules:
    - host: financeirows.grupomateus.com.br
      http:
        paths:
          - path: /
            backend:
              serviceName: financeiro-ws-service
              servicePort: 443
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: java-pro
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: financeirows.grupomateus.com.br
      http:
        paths:
          - backend:
              serviceName: financeiro-ws-service
              servicePort: 8080
  tls:
    - secretName: traefik-ui-tls-cert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: financeirows-ingress
  namespace: java-pro
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - secretName: traefik-ui-tls-cert
  rules:
  - host:
    http:
      paths:
        - path: /wsfinanceiro
          backend:
            serviceName: financeiro-ws-service
            servicePort: 8080
